# homebrew-g2c

./: README.md  converted_cypher.txt  g2c.rb  gremlin_samples.py  noxfile.py  pyproject.toml  test.py
src/g2c/: CypherLexer.interp  CypherLexer.py  CypherListener.py  CypherParser.py  CypherVisitor.py  main.py
src/g2c/packaged_data/: .g2c_cache
